Setting my admin dashboard

--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 PAYLOAD_SECRET=thisismysecret
+MONGODB_URL=mongodb+srv://thisismysecret:thisismysecret@cluster0.qy0adoy.mongodb.net/?retryWrites=true&w=majority
+NEXT_PUBLIC_SERVER_URL=http://localhost:3000
