auth flow configuration

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 PAYLOAD_SECRET=thisismysecret
 MONGODB_URL=mongodb+srv://thisismysecret:thisismysecret@cluster0.qy0adoy.mongodb.net/?retryWrites=true&w=majority
 NEXT_PUBLIC_SERVER_URL=http://localhost:3000
+
+RESEND_API_KEY=re_FtCw1fj1_2mQepxKGkjsR2y7MjTgN6Pg3
