--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-query": "4.36.1",
@@ -31,7 +32,7 @@
     "express": "^4.18.2",
     "lucide-react": "^0.315.0",
     "next": "14.1.0",
-    "nodemailer": "^6.9.8",
+    "nodemailer": "^6.9.9",
     "payload": "^2.9.0",
     "react": "^18",
     "react-dom": "^18",
